---------------------------------------------
     Pidgin Paranoia Plug-in Change Log
---------------------------------------------

0.0.1
Simon Wenner:
 * Basic plugin structure
 * A build system 'from hell'! (but it seems to work)
 * Basic CLI functionality

Christan Wäckerlin:
 * OTP documentation