@@ -1,5 +1,5 @@
 #!/bin/bash
-
 # Help: http://www.network-theory.co.uk/docs/gccintro/gccintro_11.html
-echo "gcc -Wall otptester.c libotp.c -o otptester"
-gcc -Wall otptester.c libotp.c -o otptester
+# Help: http://developer.gnome.org/doc/API/2.0/glib/glib-compiling.html
+echo "gcc `pkg-config --cflags --libs glib-2.0` otptester.c libotp.c -o otptester"
+gcc `pkg-config --cflags --libs glib-2.0` otptester.c libotp.c -o otptester
